--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PawLog — Pet Health, Vet-Ready</title>
+    <title>FurScript — Pet Health, Vet-Ready</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-    <h1>🐾 PawLog</h1>
+    <h1>🐾 FurScript</h1>
     <p>Pet Health, Vet-Ready.<br>Track your pet's health with clinical-grade intelligence.</p>
     <div class="links">
         <a href="privacy">Privacy Policy</a>
