--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>PawLog — Privacy Policy</title>
+	<title>FurScript — Privacy Policy</title>
 	<style>
 		body {
 			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -58,7 +58,7 @@
 	<h1>Privacy Policy</h1>
 	<p class="updated">Last updated: February 22, 2026</p>
 
-	<p>PawLog ("the App") is operated by 클래리티 (Clarity), Business Registration Number 207-07-44613 ("we," "us," or
+	<p>FurScript ("the App") is operated by 클래리티 (Clarity), Business Registration Number 207-07-44613 ("we," "us," or
 		"our"). We are committed to protecting your privacy. This Privacy Policy explains what information the App
 		collects, how it is used, and your rights regarding that information.</p>
 
@@ -166,7 +166,7 @@
 	</ul>
 
 	<h2>6. Children's Privacy</h2>
-	<p>PawLog is not directed at children under 13. We do not knowingly collect personal information from children. If
+	<p>FurScript is not directed at children under 13. We do not knowingly collect personal information from children. If
 		you believe a child has provided us with personal data, please contact us at <a
 			href="mailto:info@klarit.io">info@klarit.io</a>.</p>
 
